Fix #cloud-container causing horizontal scroll

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -576,7 +576,7 @@ p code {
     background-color: #0099ff;
     background: rgb(0, 236, 255);
     background: linear-gradient(7deg, rgb(0, 213, 255)0%, rgb(0, 162, 255) 100%);
-    width: 100dvw;
+    width: 100%;
     height: 16rem;
     position: absolute;
     overflow: hidden;
